--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,10 @@ input, select, button {
   padding-top: 30px;
 }
 
+.p-10 {
+  padding: 10px;
+}
+
 .p-60 {
   padding: 60px;
 }
@@ -79,6 +83,10 @@ input, select, button {
 
 .gray-bg {
   background: #F5F5F5;
+}
+
+.dark-purple-bg {
+  background: #57078C;
 }
 
 .block {
@@ -141,6 +149,7 @@ input, select, button {
   padding: 18px 32px;
   display: inline-block;
   transition: 0.3s;
+  cursor: pointer;
 }
 .button:hover {
   background: #781ac9;
@@ -435,16 +444,16 @@ input, select, button {
   margin-bottom: 40px;
 }
 
-.course-wrapper {
+.course-link.grid-span {
+  grid-column: 1/3;
+}
+.course-link .course-wrapper {
   height: 400px;
   padding: 20px;
   position: relative;
   overflow: hidden;
 }
-.course-wrapper.grid-span {
-  grid-column: 1/3;
-}
-.course-wrapper .course__bg-overlay {
+.course-link .course-wrapper .course__bg-overlay {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -453,13 +462,13 @@ input, select, button {
   background: rgba(0, 0, 0, 0.3);
   transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
 }
-.course-wrapper .course__contents {
+.course-link .course-wrapper .course__contents {
   position: relative;
   z-index: 1;
   margin-top: 368px;
   transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
 }
-.course-wrapper .course__contents .expand-collapse {
+.course-link .course-wrapper .course__contents .expand-collapse {
   height: 40px;
   width: 40px;
   border: 2px solid #ffffff;
@@ -467,54 +476,54 @@ input, select, button {
   position: relative;
   margin: auto;
 }
-.course-wrapper .course__contents .expand-collapse div {
+.course-link .course-wrapper .course__contents .expand-collapse div {
   position: absolute;
   background: #ffffff;
 }
-.course-wrapper .course__contents .expand-collapse .plus {
+.course-link .course-wrapper .course__contents .expand-collapse .plus {
   height: 70%;
   width: 3px;
 }
-.course-wrapper .course__contents .expand-collapse .minus {
+.course-link .course-wrapper .course__contents .expand-collapse .minus {
   width: 70%;
   height: 3px;
 }
-.course-wrapper .course__contents .course__study-levels-wrapper {
+.course-link .course-wrapper .course__contents .course__study-levels-wrapper {
   gap: 10px 20px;
   margin-bottom: 10px;
 }
-.course-wrapper .course__contents .course__study-levels-wrapper div {
+.course-link .course-wrapper .course__contents .course__study-levels-wrapper div {
   margin: 5px 0;
   padding: 10px;
   opacity: 0;
   transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
 }
-.course-wrapper .course__contents .course__study-levels-wrapper div p {
+.course-link .course-wrapper .course__contents .course__study-levels-wrapper div p {
   margin: 0;
 }
 @media only screen and (min-width: 1500px) {
-  .course-wrapper:hover .course__contents {
+  .course-link .course-wrapper:hover .course__contents {
     margin-top: 0;
   }
-  .course-wrapper:hover .course__contents .course__study-levels-wrapper div {
+  .course-link .course-wrapper:hover .course__contents .course__study-levels-wrapper div {
     opacity: 1;
   }
-  .course-wrapper:hover .course__bg-overlay {
+  .course-link .course-wrapper:hover .course__bg-overlay {
     background: rgba(133, 29, 224, 0.95);
   }
-  .course-wrapper .expand-collapse {
+  .course-link .course-wrapper .expand-collapse {
     display: none;
   }
 }
 @media only screen and (max-width: 1500px) {
-  .course-wrapper .course__contents {
+  .course-link .course-wrapper .course__contents {
     text-align: center;
     margin-top: 0;
   }
-  .course-wrapper .course__contents .course__study-levels-wrapper div {
+  .course-link .course-wrapper .course__contents .course__study-levels-wrapper div {
     opacity: 1;
   }
-  .course-wrapper .course__bg-overlay {
+  .course-link .course-wrapper .course__bg-overlay {
     background: rgba(133, 29, 224, 0.95);
   }
 }
@@ -539,6 +548,39 @@ input, select, button {
   display: inline-block;
   margin: 5px 10px 0px 0px;
   background: #57078C;
+}
+
+.modules .module-input {
+  display: none;
+}
+.modules .module-input:checked + .module-label {
+  background: #57078C !important;
+}
+.modules .module-label {
+  cursor: pointer;
+  margin-right: 8px;
+}
+.modules .input-field {
+  position: relative;
+}
+.modules .module-info--list .module-info--item {
+  background: #e3e3e3;
+  padding: 5px 20px;
+  opacity: 0;
+}
+.modules .module-info--list .module-info--item:not(:first-child) {
+  margin-top: 30px;
+}
+.modules .module-info--list .module-info--item:hover {
+  background: #d6d6d6;
+}
+.modules .module-info--list.show-modules .module-info--item {
+  padding: 5px 20px;
+  transition: 0.1s;
+  opacity: 1;
+}
+.modules .module-info--list.show-modules .module-info--item:not(:first-child) {
+  margin-top: 10px;
 }
 
 .testimonials .testimonial-wrapper {
