--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,10 @@ input, select, button {
 
 .no-margin {
   margin: 0;
+  margin-top: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .mt-10 {
@@ -67,6 +71,10 @@ input, select, button {
 
 .p-10 {
   padding: 10px;
+}
+
+.p-20 {
+  padding: 20px;
 }
 
 .p-60 {
@@ -142,6 +150,14 @@ input, select, button {
   justify-content: flex-start;
 }
 
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .button {
   background: #851DE0;
   color: #ffffff;
@@ -150,6 +166,9 @@ input, select, button {
   display: inline-block;
   transition: 0.3s;
   cursor: pointer;
+}
+.button.button--small {
+  padding: 10px 20px;
 }
 .button:hover {
   background: #781ac9;
@@ -267,6 +286,26 @@ input, select, button {
 
 .text-left {
   text-align: left;
+}
+
+.message {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 10;
+  background: #ffffff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s;
+}
+.message.show-message {
+  top: 50%;
+  opacity: 1;
+  visibility: visible;
 }
 
 .nav {
@@ -581,6 +620,26 @@ input, select, button {
 }
 .modules .module-info--list.show-modules .module-info--item:not(:first-child) {
   margin-top: 10px;
+}
+
+.award-leaders section .arrow {
+  position: absolute;
+  top: 50%;
+}
+.award-leaders section .left-arrow {
+  left: 0;
+}
+.award-leaders section .right-arrow {
+  right: 0;
+}
+.award-leaders section .award-leader {
+  width: calc(100% - 200px);
+  margin: auto;
+}
+.award-leaders section .award-leader img {
+  width: 250px;
+  height: 250px;
+  margin-right: 30px;
 }
 
 .testimonials .testimonial-wrapper {
