--- a/css/variables.css
+++ b/css/variables.css
@@ -47,6 +47,10 @@ input, select, button {
 
 .no-margin {
   margin: 0;
+  margin-top: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .mt-10 {
@@ -67,6 +71,10 @@ input, select, button {
 
 .p-10 {
   padding: 10px;
+}
+
+.p-20 {
+  padding: 20px;
 }
 
 .p-60 {
@@ -142,6 +150,14 @@ input, select, button {
   justify-content: flex-start;
 }
 
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .button {
   background: #851DE0;
   color: #ffffff;
@@ -150,6 +166,9 @@ input, select, button {
   display: inline-block;
   transition: 0.3s;
   cursor: pointer;
+}
+.button.button--small {
+  padding: 10px 20px;
 }
 .button:hover {
   background: #781ac9;
