Layed the basis of the swiper slider

--- a/css/variables.css
+++ b/css/variables.css
@@ -45,6 +45,11 @@ input, select, button {
   border-radius: 0px;
 }
 
+.swiper-container {
+  width: 600px;
+  height: 300px;
+}
+
 .no-margin {
   margin: 0;
   margin-top: 0 !important;
