--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -64,6 +64,12 @@ input, select, button {
     border-radius: 0px;
 }
 
+// Swiper
+.swiper-container {
+    width: 600px;
+    height: 300px;
+}
+
 // Spaceing
 .no-margin {
     margin: 0;
