--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,11 @@ input, select, button {
   border-radius: 0px;
 }
 
+.swiper-container {
+  width: 600px;
+  height: 300px;
+}
+
 .no-margin {
   margin: 0;
   margin-top: 0 !important;
@@ -332,9 +337,6 @@ input, select, button {
   color: #851DE0;
 }
 
-.header.header--home {
-  background: url("../images/headers/gallery-images/success.jpg");
-}
 .header.header--courses {
   background: url("../images/headers/students.jpg");
 }
@@ -350,12 +352,15 @@ input, select, button {
   background: #851DE0;
 }
 .header .header-content {
-  position: absolute;
-  top: 50%;
-  width: 100%;
   text-align: center;
+}
+.header .header-content .header--home {
+  background: url("../images/headers/gallery-images/success.jpg");
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
   left: 0;
-  transform: translateY(-50%);
 }
 .header .slider__arrows {
   position: absolute;
