--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -55,7 +55,6 @@
 // Header styling
 .header {
 
-    &.header--home { background: url('../images/headers/gallery-images/success.jpg'); }
     &.header--courses { background: url('../images/headers/students.jpg'); }
     &.header--web-development { background: url('../images/thumbnails/web-development.jpg'); }
 
@@ -69,12 +68,16 @@
     }
 
     .header-content {
-        position: absolute;
-        top: 50%;
-        width: 100%;
         text-align: center;
-        left: 0;
-        transform: translateY(-50%);
+
+        .header--home { 
+            background: url('../images/headers/gallery-images/success.jpg');
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+        }
     }
 
     .slider__arrows {
