--- a/css/styles.css
+++ b/css/styles.css
@@ -185,11 +185,11 @@ input, select, button {
   flex-flow: row wrap;
   border-radius: 3px;
   justify-content: space-around;
-  width: 100px;
+  width: 100px !important;
   margin: 10px auto 0;
   background: rgba(10, 39, 64, 0.5);
 }
-.dots .dot {
+.dots .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -198,16 +198,16 @@ input, select, button {
   margin: 0 7px;
   cursor: pointer;
 }
-.dots .dot.is-active {
+.dots .swiper-pagination-bullet.swiper-pagination-bullet-active {
   opacity: 1;
 }
-.dots .dot:hover {
+.dots .swiper-pagination-bullet:hover {
   opacity: 1;
 }
 .dots.inverted {
   background: transparent;
 }
-.dots.inverted .dot {
+.dots.inverted .swiper-pagination-bullet {
   background: #0A2740;
 }
 .dots.inverted--light {
@@ -237,7 +237,7 @@ input, select, button {
   height: 800px;
 }
 
-.bg-img-properties {
+.bg-img-properties, .header .header-content {
   background-position: center !important;
   background-size: cover !important;
   background-repeat: no-repeat !important;
@@ -343,6 +343,9 @@ input, select, button {
 .header.header--web-development {
   background: url("../images/thumbnails/web-development.jpg");
 }
+.header .swiper-wrapper {
+  z-index: -1;
+}
 .header .header__slide-timer {
   height: 5px;
   position: absolute;
@@ -353,14 +356,10 @@ input, select, button {
 }
 .header .header-content {
   text-align: center;
-}
-.header .header-content .header--home {
-  background: url("../images/headers/gallery-images/success.jpg");
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .header .slider__arrows {
   position: absolute;
@@ -380,8 +379,8 @@ input, select, button {
 }
 .header .dots {
   position: absolute;
-  bottom: 120px;
-  left: 50%;
+  bottom: 120px !important;
+  left: 50% !important;
   transform: translateX(-50%);
   background: rgba(0, 0, 0, 0.5);
 }
