--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -212,11 +212,11 @@ input, select, button {
     flex-flow: row wrap;
     border-radius: 3px;
     justify-content: space-around;
-    width: 100px;
+    width: 100px !important;
     margin: 10px auto 0;
     background: transparentize($fourth-color, .5);
 
-    .dot {
+    .swiper-pagination-bullet {
         width: 10px;
         height: 10px;
         border-radius: 50%;
@@ -225,9 +225,9 @@ input, select, button {
         margin: 0 7px;
         cursor: pointer;
 
-        &.is-active {
+        &.swiper-pagination-bullet-active {
             opacity: 1;
-        }
+        } 
 
         &:hover {
             opacity: 1;
@@ -237,8 +237,10 @@ input, select, button {
     &.inverted {
         background: transparent;
 
-        .dot {
+        .swiper-pagination-bullet {
             background: $fourth-color;
+
+
         }
     }
 
