Changed the message posittion from absolute to fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ input, select, button {
 }
 
 .message {
-  position: absolute;
+  position: fixed;
   top: 30%;
   left: 50%;
   transform: translateX(-50%);
