--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,7 +3,7 @@
 
 // Message styling
 .message {
-    position: absolute;
+    position: fixed;
     top: 30%;
     left: 50%;
     transform: translateX(-50%);
