--- a/css/styles.css
+++ b/css/styles.css
@@ -323,18 +323,73 @@ input, select, button {
   justify-content: space-between;
   align-items: center;
 }
+@media only screen and (max-width: 950px) {
+  .nav .wrapper {
+    justify-content: center;
+  }
+}
 .nav .list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.nav .list .link {
+.nav .list .sub-list {
+  display: none;
+}
+.nav .list .link, .nav .list .item--show {
   display: inline-block;
   padding: 20px;
   font-weight: 700;
 }
-.nav .list .link:hover {
+.nav .list .link:hover, .nav .list .item--show:hover {
   color: #851DE0;
+}
+.nav .list .item--show {
+  display: none;
+  text-align: center;
+  position: relative;
+}
+.nav .list .item--show .sub-list {
+  position: absolute;
+  top: -150px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  left: -100px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background: #ffffff;
+}
+@media only screen and (max-width: 950px) {
+  .nav .list {
+    position: fixed;
+    bottom: 0;
+    background: #fff;
+    z-index: 1;
+    width: 100%;
+    left: 0;
+    box-shadow: 0 0 10px rgba(10, 39, 64, 0.1);
+  }
+  .nav .list .item {
+    width: calc(100% / 4);
+  }
+  .nav .list .item.item--show {
+    display: inline-block;
+    width: calc(100px - 40px);
+  }
+  .nav .list .item.item--hide {
+    display: none;
+  }
+  .nav .list .item a {
+    width: calc(100% - 40px);
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 602px) {
+  .nav .list .item {
+    width: calc(100% / 3);
+  }
 }
 
 .header.header--courses {
@@ -392,7 +447,7 @@ input, select, button {
   width: 100%;
 }
 .header .form-wrapper .form {
-  grid-template-columns: 150px 350px 1fr;
+  grid-template-columns: 167px 350px 1fr;
   align-items: center;
 }
 .header .form-wrapper .form .form__study-level {
@@ -426,6 +481,11 @@ input, select, button {
 .header .form-wrapper .form .form__search-input button img {
   width: 16px;
   margin-right: 10px;
+}
+@media only screen and (max-width: 950px) {
+  .header {
+    z-index: -1 !important;
+  }
 }
 
 .events-section .event {
@@ -742,6 +802,11 @@ footer .footer__subscribe-form .input-field input[name=email] {
 @media only screen and (max-width: 1090px) {
   footer .footer__contact-info, footer .footer__links {
     grid-column: 1/3;
+  }
+}
+@media only screen and (max-width: 950px) {
+  footer {
+    padding-bottom: 100px;
   }
 }
 
